--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Boldonse&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Quicksand;
+  color: black;
+  background-color: yellow;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  border-bottom: 2px solid black;
+}
+
+.navbar h1 {
+  font-weight: 1000;
+  text-transform: uppercase;
+}
+
+.navbar .links {
+  margin-left: auto;
+}
+
+.navbar a{
+  background-color: black;
+  color: yellow;
+  text-decoration: none;
+  padding: 8px;
+  margin-left: 16px;
+  border-radius: 4px;
+  transition: color 0.6s, background-color 0.4s,  transform 1s;
+}
+
+.navbar a:hover {
+  color: black;
+  background-color: gold;
+}
+
+.header {
+  padding: 10px;
+  padding-left: 50px;
+  margin: 30px auto;
+}
+
+.header button {
+  margin: 10px;
+  padding: 5px;
+  background-color: black;
+  color: yellow;
+  transition: color 0.5s, background-color 0.5s, transform 0.2s
+}
+
+.header button:hover {
+  color: black;
+  background-color: gold;
+  transform: scale(1.2);
+}
+
+.gun-view {
+  max-width: 600px;
+  padding: 10px 10px;
+  margin: 10px 50px;
+  border-bottom: 1.25px solid black;
+  transition: box-shadow 0.25s; 
+}
+
+.gun-view:hover {
+  box-shadow: 3px 3px 5px gold;
+}
+
+.gun-view h2 {
+  font-size: 25px;
+  margin-bottom: 8px;
+}
+
+.gun-view button { 
+  display: block;
+  margin-left: auto;
+} 
+
+.body-pending, .body-error {
+  margin-left: 30px;
+  font-size: 30px;
+  text-transform: capitalize;
 }
